<resources>
    <string name="app_name">Fly Game</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fly_game">Игра Муха</string>
    <string name="statistic">Статистика</string>
    <string name="settings">Настройки</string>
    <string name="about_app">О программе</string>
    <string name="instructions">Инструкция</string>
    <string name="table_size">Размер таблицы</string>
    <string name="volume">Объёмное поле</string>
    <string name="start">Старт</string>


    <string-array name="table_size">
        <item>3x3</item>
        <item>4x4</item>
        <item>5x5</item>
        <item>6x6</item>
        <item>7x7</item>
        <item>8x8</item>
        <item>9x9</item>
        <item>10x10</item>
    </string-array>
    <string name="title_activity_compose">ComposeActivity</string>
    <string name="speed">Скорость</string>
    <string name="voice">Голос</string>
    <string name="number_of_moves">Количество ходов</string>
    <string name="complication">Усложнения</string>
    <string name="hide_field">Скрывать поле</string>
    <string name="waiting_response">Ожидание ответа</string>
    <string name="other_apps">Другое приложение разработчика:</string>
    <string name="schulte_table">Таблица Шульте на весь экран</string>
    <string name="advance_courses">Курсы Advance</string>
    <string name="ya_ru">https://ya.ru</string>
    <string name="my_apps">https://play.google.com/store/apps/details?id=ru.schultetabledima.schultetable</string>
    <string name="instructions_hide_field_1">Для лучшего эффекта от тренировок лучше во время игры представлять поле у себя в воображении</string>
    <string name="general_instructions_1">Муха - это игра для развития внимания и пространственного ориентирования</string>
    <string name="general_instructions_2">Поле игры представляет из себя таблицу с мухой, расположенной в центре</string>
    <string name="general_instructions_3">При нажатии кнопки \"Старт\" даются команды и нужно отслеживать движение мухи по таблице</string>
    <string name="general_instructions_4">После окончания команд нажмите на ячейку для проверки</string>
    <string name="general_instructions_5">Для лучшего эффекта выключите отображение поля и представляйте его у себя в воображении. Глаза закрывать не нужно.</string>
    <string name="instructions_volumetric_field_1">Объемное поле</string>
    <string name="instructions_volumetric_field_2">Представьте, что есть глубина</string>
    <string name="instructions_volumetric_field_3">Муха может двигаться вперед и назад</string>
</resources>

