<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/buttonToGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fly_game" />

        <Button
            android:id="@+id/buttonStatistic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/statistic" />

        <Button
            android:id="@+id/buttonSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings" />

        <Button
            android:id="@+id/buttonInstructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instructions" />

        <Button
            android:id="@+id/buttonAboutApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_app" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>